# recipe_calculator

./: .env  .gitignore  main.py  manage.py  pyproject.toml
layout/: middleware.py  urls.py  views.py
layout/static/layout/: bootstrap.css  bootstrap.css.map  main.css  main.js
layout/static/layout/bootstrap/scss/: custom.scss
layout/templates/layout/: 404.html  500.html  base.html  home.html  navbar.html  not_ready.html
recipe_calculator/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/recipes/: ingredient_form.html  recipe_form.html  recipe_ingredient_form.html  recipe_list.html
recipes/templates/recipes/partials/: deleted_message.html  recipe_line_item.html
