[project]
name = "recipe-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.7",
    "django-braces>=1.16.0",
    "django-cors-headers>=4.7.0",
    "django-crispy-forms>=2.3",
    "django-htmx>=1.22.0",
    "django-model-utils>=5.0.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.10",
    "whitenoise>=6.9.0",
]

[tool.ruff]
select = ["E", "F", "I"]
